# codex_pg

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  test_auth.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  species.py
backend/app/services/: __init__.py  birds.py  locations.py  species.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/favorites/: page.tsx
frontend/app/find-species/: page.tsx
frontend/components/: BirdCard.tsx  BirdCharts.tsx  BirdMap.tsx  DateFilter.tsx  Header.tsx  LocationModal.tsx  SpeciesCard.tsx  SpeciesDetailsModal.tsx
frontend/components/auth/: AuthModal.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/components/find-species/: ControlsBar.tsx  LocationSelector.tsx  ObservationList.tsx  SpeciesAutocomplete.tsx
frontend/components/ui/: button.tsx  card.tsx
frontend/contexts/: AuthContext.tsx  useAuthModal.tsx
frontend/lib/: api.ts  flickr.ts  pexels.ts  wikimedia.ts
